fixed form alignment

--- a/src/Register.css
+++ b/src/Register.css
@@ -16,8 +16,8 @@ body{
     backdrop-filter: blur(10px);
     width: 400px;
     margin: 50px auto;
-    margin-top:30px;
-    margin-left: 70px;
+    margin-top:50px;/*30*/
+    margin-left: 90px;
     padding-bottom: 20px;
     max-height:fit-content;
     border-radius: 10px;
@@ -36,8 +36,9 @@ body{
     border-left: transparent;
     border-right: transparent;
     font-size: 20px;
-    height: 37px;
-    width:270px;
+    
+    height: 45px;/*37*/
+    width:300px;/*270*/
 }
 
 
